--- a/templates/lambda.html
+++ b/templates/lambda.html
@@ -8,27 +8,33 @@
 
 
 
-Max  : <input type="text" id="maxi" value="1000"></br>
-loops : <input type="text" id="loop" value="1"></br>
+<ul>
+  <li>Max  : <input type="text" id="maxi" value="1000"></li>
+  <li>loops : <input type="text" id="loop" value="1"></li>
+  <li>times : <input type="text" id="t" value="4"></li>
+  <li>Concurrent mode :<select id="concurrent"><option value="off"> off</option><option value="on"> on</option></select></li>
+  <li>mb :<select id="mb"><option value="128"> 128MB</option><option value="256"> 256MB</option><option value="512"> 512MB</option><option value="1024"> 1024MB</option></select></li>
+</ul>
 
-times : <input type="text" id="t" value="4">  </br>
 
-mb :<select id="mb">
-  <option value="128"> 128MB</option>
-  <option value="256"> 256MB</option>
-  <option value="512"> 512MB</option>
-  <option value="1024"> 1024MB</option>
-</select>
+
+
+
+
+
 
 
 
 <button type="button" onclick="ajax()">Invoke prime number lambda</button>
 
 
-<ul id="demo"></ul>
+
 
 
 <canvas id="myChart"></canvas>
+
+
+<ul id="demo"></ul>
 <script type="text/javascript" src="{{ url_for('static', filename='Chart.bundle.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='Chart.min.js') }}"></script>
 
@@ -41,118 +47,9 @@ mb :<select id="mb">
 
 
 
-<!--This is a comment. Comments are not displayed in the browser
-<script type="text/javascript" src="{{ url_for('static', filename='js.js') }}"></script>
--->
-<script>
-
-function dataVisualize(data, times) {
-
-var ctx = document.getElementById('myChart').getContext('2d');
-
-var chart = new Chart(ctx, {
-    // The type of chart we want to create
-    type: 'line',
-
-    // The data for our dataset
-    data: {
-        labels: times ,
-        datasets: [{
-            label: "Lambda performance",
-            backgroundColor: 'rgb(255, 99, 132)',
-            borderColor: 'rgb(255, 99, 132)',
-            data: data,
-        }]
-    },
-
-    // Configuration options go here
-    options: {}
-});
-
-}
+<script type="text/javascript" src="{{ url_for('static', filename='lambda.js') }}"></script>
 
 
-
-
-
-function ajax() {
-
-   var maxi = document.getElementById("maxi").value;
-         var loops =document.getElementById("loop").value;
-        var times =document.getElementById("t").value;
-var e = document.getElementById("mb")
-var mb   =  e.options[e.selectedIndex].value;
-
-
-
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 201) {
-          var   datas    =  JSON.parse( this.responseText).json  ; 
-         var jsons = [] ;
-  for  (var i = 0 ; i < datas.length ; i++)  {
-             jsons.push (  JSON.parse (datas[i]))  ;
-		
-}            
-  
-            insertHTML (jsons) ; 
-               var duration = [] ;           
- for (var i = 0 ; i < jsons.length ; i++ ) {
-              duration.push   (  jsons[i].durationSeconds);
-             
-		}
-     
-   var labels =  [] ;
- for  (var i= 0 ; i < times ; i++) {
-
-           
-       labels.push (i+"th times") ; 
-
-}
-
-
-
-            
-     dataVisualize (duration,  labels ); 
-
-
-
-    }
-  };
-
-           
-//  xhttp.open("GET", "/get", true);
- // xhttp.send ();        //  Request URL:http://52.10.250.199:5000/get
- xhttp.open("POST", "/post", true);
-  xhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
- xhttp.send(JSON.stringify({ maxi:  maxi,  loops: loops , times : times, mb :mb }));
-
-}
-
-function insertHTML  (D){
-      
-for (var i=0;i< D.length  ;i++) {
-   (function(ind) {
-      
- setTimeout(function(){ 
- var  li  ;  li =   " durationSeconds :"+   D[ind].durationSeconds+ " ;  loops : "  + D[ind].loops +"; max : " + D[ind].max  ;         
-                                      
-   var node = document.createElement("LI");
-    var textnode = document.createTextNode(li);
-    node.appendChild(textnode);
-       document.getElementById("demo").appendChild(node)  ;
-
-
-
-}, 1000 * (ind+1) );
-   }  )(i);
-}
-
-       
-}
-
-
-</script>
 
 </body>
 </html>
