--- a/templates/lambda.html
+++ b/templates/lambda.html
@@ -9,9 +9,9 @@
 
 
 <ul>
-  <li>Max  : <input type="text" id="maxi" value="1000"></li>
-  <li>loops : <input type="text" id="loop" value="1"></li>
-  <li>times : <input type="text" id="t" value="4"></li>
+  <li>Max  : <input type="number" id="maxi" value="1000"></li>
+  <li>loops : <input type="number" id="loop" value="1"></li>
+  <li>times : <input type="number" id="t" value="4"></li>
   <li>Concurrent mode :<select id="concurrent"><option value="off"> off</option><option value="on"> on</option></select></li>
   <li>mb :<select id="mb"><option value="128"> 128MB</option><option value="256"> 256MB</option><option value="512"> 512MB</option><option value="1024"> 1024MB</option></select></li>
 </ul>
