project2.html added

--- a/templates/project2.html
+++ b/templates/project2.html
@@ -37,6 +37,14 @@
 
 
 <script>
+
+function ajax(){
+location.reload();
+
+
+}
+
+
 var ctx = document.getElementById("myChart");
 var myChart = new Chart(ctx, {
 
