--- a/templates/lambda.html
+++ b/templates/lambda.html
@@ -9,11 +9,21 @@
 
 
 <ul>
-  <li>Max  : <input type="number" id="maxi" value="1000"></li>
+  <li>Max  : <input type="number" id="maxi" value="1"></li>
   <li>loops : <input type="number" id="loop" value="1"></li>
-  <li>times : <input type="number" id="t" value="4"></li>
+  <li>times : <input type="number" id="t" value="1"></li>
   <li>Concurrent mode :<select id="concurrent"><option value="off"> off</option><option value="on"> on</option></select></li>
   <li>mb :<select id="mb"><option value="128"> 128MB</option><option value="256"> 256MB</option><option value="512"> 512MB</option><option value="1024"> 1024MB</option></select></li>
+  <li>data visualisation mode :
+    <select id="chartmode">
+      <option value="line"> line</option>
+      <option value="bar"> bar</option>
+      <option value="radar"> radar</option>
+      <option value="doughnut"> doughnut</option>
+      <option value="pie"> pie</option>
+      <option value="polarArea"> polarArea</option>
+      <option value="bubble"> bubble</option>
+  </select></li>
 </ul>
 
 
@@ -30,8 +40,10 @@
 
 
 
-
+<div style="padding : 100px ;margin : 100px ;  ">
 <canvas id="myChart"></canvas>
+</div>
+
 
 
 <ul id="demo"></ul>
