--- a/templates/lambda.html
+++ b/templates/lambda.html
@@ -9,7 +9,7 @@
 
 
 <ul>
-  <li> please input last 4 char of API key  : <input type="text" id="l4" value="put the 4 char"></li>
+  <li> please input last 4 char of API key  : <input type="text" id="l4" value="Vvuc"></li>
   <li>Max  : <input type="number" id="maxi" value="10"></li>
   <li>loops : <input type="number" id="loop" value="1"></li>
   <li>times : <input type="number" id="t" value="4"></li>
