--- a/templates/lambda.html
+++ b/templates/lambda.html
@@ -33,6 +33,8 @@
 
 
 
+<button type="button" onclick="offon()">Invoke prime number lambda with concurrent and non concurrent </button>
+
 
 
 
@@ -46,7 +48,9 @@
 
 
 <div style="padding : 100px ;margin : 100px ;  ">
-<canvas id="myChart"></canvas>
+<canvas id="myChart1"></canvas>
+<canvas id="myChart2"></canvas>
+<canvas id="myChart3"></canvas>
 </div>
 
 
