--- a/templates/k1.html
+++ b/templates/k1.html
@@ -50,7 +50,7 @@
 
 
 
-<script type="text/javascript" src="{{ url_for('static', filename='khushi.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='k1.js') }}"></script>
 
 
 
