--- a/templates/lambda.html
+++ b/templates/lambda.html
@@ -73,15 +73,8 @@ li {
 
 
 
-<div style="margin-left : 100px ; margin-right :100px  ">
-<canvas id="c0"></canvas>
-<canvas id="c1"></canvas>
-<canvas id="c2"></canvas>
-<canvas id="c3"></canvas>
-<canvas id="c4"></canvas>
-<canvas id="c5"></canvas>
-<canvas id="c6"></canvas>
-<canvas id="c7"></canvas>
+<div id="cv" style="margin-left : 100px ; margin-right :100px  ">
+
 </div>
 
 
