--- a/templates/k1.html
+++ b/templates/k1.html
@@ -25,6 +25,7 @@
 
 
 
+<div id="chart"></div>
 
 
 
@@ -48,7 +49,7 @@
 
 
 
-
+<script type="text/javascript" src="{{ url_for('static', filename='c3.min.js') }}"></script>
 
 <script type="text/javascript" src="{{ url_for('static', filename='k1.js') }}"></script>
 
