--- a/templates/k1.html
+++ b/templates/k1.html
@@ -9,7 +9,7 @@
 
 <form enctype="multipart/form-data" method="post" name="fileinfo">
   <ul>
-    <li > please input last 4 chars of AWS API key  : <input style="border : 5px solid #800080" type="text" id="l4" value="Vvuc"></li>
+    <li > please input last 4 chars of AWS API key  : <input style="border : 5px solid #800080" type="text" id="l4" value="1t"></li>
     <li>Max  : <input type="number" id="maxi" value="10"   min="10" max="1000"></li>
     <li>loops : <input type="number" id="loop" value="1"  min="1" max="5"></li>
     <li>times : <input type="number" id="t" value="4"  min="1" max="100"></li>
