--- a/templates/k1.html
+++ b/templates/k1.html
@@ -46,7 +46,7 @@
 
 
 
-
+<script type="text/javascript" src="{{ url_for('static', filename='d3.min.js') }}"></script>
 
 
 <script type="text/javascript" src="{{ url_for('static', filename='c3.min.js') }}"></script>
