--- a/templates/k1.html
+++ b/templates/k1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='c3.min.css') }}">
 <body>
 
 <h1>Challenge "A+"</h1>
