--- a/templates/lambda.html
+++ b/templates/lambda.html
@@ -26,9 +26,9 @@ li {
 .button5 {background-color: #555555;} /* Black */
 
 </style>
-<h1>Challenge "A+"</h1>
+<h1> please inform me when you finish testing via beaconwarden@gmail.com </h1>
 
-<p>Create an EC2 instance and implement a dynamic web page allowing you to invoke the prime number lambda.</p>
+<p>  Python flask Web APP calling the AWS prime number lambda live demo .</p>
 
 <div id="chart"></div>
 <form enctype="multipart/form-data" method="post" name="fileinfo">
