--- a/templates/k1.html
+++ b/templates/k1.html
@@ -18,7 +18,7 @@
     <li style=" color: blue;">mb :<select id="mb"><option value="128"> 128MB</option><option value="256"> 256MB</option><option value="512"> 512MB</option><option value="1024"> 1024MB</option></select></li>
   </ul>
 
-  <input style="   border: 2px solid #941b7b;  background-color: black;  color: white;" type="submit" value=" "click here to" update the parameteres and Invoke demo prime number lambda demo  " />
+  <input style=" border: 2px solid #941b7b;  background-color: black;  color: white;" type="submit" value=" click here to update the parameteres and Invoke demo prime number lambda demo  " />
 </form>
 
 
