--- a/templates/lambda.html
+++ b/templates/lambda.html
@@ -26,11 +26,18 @@ li {
 .button5 {background-color: #555555;} /* Black */
 
 </style>
-<h1> please inform me when you finish testing via beaconwarden@gmail.com </h1>
+<h1> please inform me when you finish testing via beaconwarden@gmail.com so that i can turn </h1>
 
 <p>  Python flask Web APP calling the AWS prime number lambda live demo .</p>
 
-<div id="chart"></div>
+
+<div id="chart1"></div>
+<div id="chart2"></div>
+<div id="chart3"></div>
+<div id="chart4"></div>
+<div id="chart5"></div>
+<div id="chart6"></div>
+<div id="chart7"></div>
 <form enctype="multipart/form-data" method="post" name="fileinfo">
   <ul>
     <li > please input last 4 chars of AWS API key  : <input style="border : 5px solid #800080" type="text" id="l4" value="Vvuc"></li>
