--- a/templates/lam.html
+++ b/templates/lam.html
@@ -35,9 +35,9 @@ li {
 
 
 
- <textarea name="textarea" placeholder="Enter the text...">
-     { maxi : 100 ,  loops : 1 , times :  1 , apik : 'Vvuc'   }
-     
+ <textarea  id="ta" name="textarea" placeholder="Enter the text...">
+   
+     {maxi :1000, loops : 1,  times : 10  , mb :128 , conc :"on"  , last4 : "Vvuc" }
  </textarea>
 
 
