--- a/templates/lam.html
+++ b/templates/lam.html
@@ -35,10 +35,7 @@ li {
 
 
 
- <textarea  id="ta" name="textarea" placeholder="Enter the text...">
-   
-     {maxi :1000, loops : 1,  times : 10  , mb :128 , conc :"on"  , last4 : "Vvuc" }
- </textarea>
+ <textarea style ="width: 1000px" id="ta" name="textarea" placeholder="Enter the text...">{"maxi" :1000, "loops" : 1,  "times" : 10  , "mb" :128 , "conc" :"on"  , "last4" : "Vvuc" }</textarea>
 
 
 
