--- a/templates/lam.html
+++ b/templates/lam.html
@@ -26,7 +26,7 @@ li {
 .button5 {background-color: #555555;} /* Black */
 
 </style>
-<h1> please inform me when you finish testing via beaconwarden@gmail.com so that i can turn </h1>
+<h1> please inform me when you finish testing via beaconwarden@gmail.com so that i can turn the EC2 off to save money </h1>
 
 <p>  Python flask Web APP calling the AWS prime number lambda live demo .</p>
 
@@ -43,15 +43,7 @@ li {
 <button type="button" onclick="loadDoc()">Request data</button>
 
 
-
-
-
-
-
-
-
-
-<div id="cv" style="margin-left : 100px ; margin-right :100px  ">
+<div id="cv" style="margin-left : 500px ; margin-right :500px  ">
 
 </div>
 
