--- a/templates/lam.html
+++ b/templates/lam.html
@@ -40,7 +40,7 @@ li {
 
 
 
-<button type="button" onclick="loadDoc()">Request data</button>
+<button type="button" onclick="loadDoc()">Request lambda</button>
 
 
 <div id="cv" style="margin-left : 500px ; margin-right :500px  ">
