--- a/Ng406/src/app/chart-js/chart-js.component.css
+++ b/Ng406/src/app/chart-js/chart-js.component.css
@@ -10,10 +10,18 @@ li {
   
 }
 
+
+
+button:hover {
+    background-color: green  !important;;
+     cursor:pointer; 
+}
+
 .canvasc{
     
     width:80%;
-    height:"400"
+  
+    margin-left : 200px;
 }
 
 
@@ -50,7 +58,7 @@ body {
 
   box-shadow: 0 0 40px #00FFFF;
 
-  -webkit-animation: breath 20; 
+  -webkit-animation: breath 20s; 
           animation: breath 20s;
 
   -webkit-animation-iteration-count:infinite;
@@ -59,16 +67,16 @@ body {
 }
 
 
-li {
+input {
  
 
-  border-radius: 4px;
+  border-radius: 10px;
   background: 	#000;
 
-  box-shadow: 0 0 50px #483D8B;
+  box-shadow: 0 0 200px #483D8B;
 
-  -webkit-animation: breath2 10s; 
-          animation: breath2 10s;
+  -webkit-animation: breath3 5s; 
+          animation: breath3 5s;
 
   -webkit-animation-iteration-count:infinite;
           animation-iteration-count:infinite;
@@ -76,24 +84,40 @@ li {
 }
 
 
-@-webkit-keyframes breath2 {
-  0%    {opacity: 0.8;}
-  60%   {opacity:  0.9;}
+@-webkit-keyframes breath3 {
+  0%    {opacity: 1;}
+
+  60%   {opacity:  0.6;}
+  70%   {opacity:  0.7;}
+  80%   {opacity:  0.8;}
+  90%   {opacity:  0.9;}
   100%  {opacity: 1;}
 }
-@-o-keyframes breath2 {
-  0%    {opacity: 0.8;}
-  60%   {opacity:  0.9;}
+@-o-keyframes breath3 {
+  0%    {opacity: 1;}
+
+  60%   {opacity:  0.6;}
+  70%   {opacity:  0.7;}
+  80%   {opacity:  0.8;}
+  90%   {opacity:  0.9;}
   100%  {opacity: 1;}
 }
-@-moz-keyframes breath2 {
-  0%    {opacity: 0.8;}
-  60%   {opacity:  0.9;}
+@-moz-keyframes breath3 {
+  0%    {opacity: 1;}
+
+  60%   {opacity:  0.6;}
+  70%   {opacity:  0.7;}
+  80%   {opacity:  0.8;}
+  90%   {opacity:  0.9;}
   100%  {opacity: 1;}
 }
-@keyframes breath2 {
-  0%    {opacity: 0.8;}
-  60%   {opacity:  0.9;}
+@keyframes breath3 {
+  0%    {opacity: 1;}
+
+  60%   {opacity:  0.6;}
+  70%   {opacity:  0.7;}
+  80%   {opacity:  0.8;}
+  90%   {opacity:  0.9;}
   100%  {opacity: 1;}
 }
 
