--- a/dockernet/aspnetapp/Views/Home/Index.cshtml
+++ b/dockernet/aspnetapp/Views/Home/Index.cshtml
@@ -6,14 +6,7 @@
 <body>
 
   <div>
-    <h2>All Products</h2>
-    <ul id="products" />
-  </div>
-  <div>
-    <h2>Search by todo</h2>
-    <input type="text" id="prodId" size="5" />
-    <input type="button" value="Search" onclick="find();" />
-    <p id="product" />
+ This is the ASP.NET CORE headless API server.
   </div>
 
   <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
