--- a/Ng406/src/app/app.component.html
+++ b/Ng406/src/app/app.component.html
@@ -6,9 +6,9 @@
 
  </div>
 
-<nav>
-  <a routerLink="/chartjs">chartjs</a>
-  <a routerLink="/labsql">SQL Lab</a>
+<nav >
+  <a routerLink="/chartjs">  <font  class="btn btn-primary" size="13" color="red">Chart js </font></a>
+  <a routerLink="/labsql"> <font  class="btn btn-primary"  size="13" color="red">SQL Lab</font> </a>
 </nav>
 <router-outlet></router-outlet>
 
@@ -19,11 +19,3 @@
 
 
 
-<h5><a href="http://35.163.140.165:5000/getSatisfactory" target="_blank">EC2 REST API JSON endpoint @ lambda project</a>  </h5>
-
-<h5><a href="https://github.com/jconning/lambda-cpu-cost/blob/master/eratosthenes_lambda.py" target="_blank">python codes running on aws  lambda </a>  </h5>
-
-
-<h5><a href="https://adrian-beaconwarden-us-adrianng.c9.io/magic/index.php" target="_blank">js demo </a>  </h5>
-
-http://ecs.victoria.ac.nz/Courses/NWEN406_2017T2/ProjectTwo
