--- a/Ng406/src/app/lab-sql/lab-sql.component.css
+++ b/Ng406/src/app/lab-sql/lab-sql.component.css
@@ -11,3 +11,21 @@ body {
   overflow: auto;
   max-height: 500px;
 }
+
+
+tbody {
+    display: table-row-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
+
+tr {
+    display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+}
+
+td {
+    border-left: 1px solid #ddd;
+    color : green;
+}
