--- a/Ng406/src/app/lab-sql/lab-sql.component.html
+++ b/Ng406/src/app/lab-sql/lab-sql.component.html
@@ -1,38 +1,21 @@
 <div style=" background-color: black;">
     <h2 style="color: green;">this SQL lab is to test the SQL statement via the browser. It makes call to the ASP.NET core middleware , then MVC controller uses HttpClient to forward the http request to Python Flask which makes call to PostgreSQL DB and return the query result all the way back to front end</h2>
-    <textarea [(ngModel)]="Req.sqlStatement"  style="width:100%; height :500px"  id="code">  SQL </textarea > 
+    <textarea [(ngModel)]="Req.sqlStatement"  style="width:100%; height :100px"  id="code">  SQL </textarea > 
 		
 <button  class="btn btn-primary"  (click)="postSqlScript()" >Issue SQL cmd</button>
 
 <h2 style="color: green;">SQL result: </h2>
-<ul>
-  <li *ngFor="let s of sqlOutput">
-    <span style="color:green">{{s.row}}</span> 
-  </li>
-</ul>
+
 
 <a href="https://www.tutorialspoint.com/postgresql/" target="_blank">PostgreSQL reference</a>
 
 
-
-<div class="example-container mat-elevation-z8">
-  <mat-table #table [dataSource]="dataSource">
-
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.row}} </mat-cell>
-    </ng-container>
+<table>
+<tbody id="ngt"></tbody>
+</table>
 
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
 
-  <mat-paginator #paginator
-                 [pageSize]="10"
-                 [pageSizeOptions]="[5, 10, 20]">
-  </mat-paginator>
-</div>
+
 
 </div>
