remove duplicated DOM

--- a/Ng406/src/app/lab-sql/lab-sql.component.html
+++ b/Ng406/src/app/lab-sql/lab-sql.component.html
@@ -10,8 +10,8 @@
 <a href="https://www.tutorialspoint.com/postgresql/" target="_blank">PostgreSQL reference</a>
 
 
-<table>
-<tbody id="ngt"></tbody>
+<table id="ngt">
+
 </table>
 
 
