added code mirror

--- a/Ng406/src/app/lab-sql/lab-sql.component.html
+++ b/Ng406/src/app/lab-sql/lab-sql.component.html
@@ -1,23 +1,29 @@
-<div style=" background-color: black;">
-    
-    
-    <h2 style="color: green;">this SQL lab is to test the SQL statement via the browser. It makes call to the ASP.NET core middleware , then MVC controller uses HttpClient to forward the http request to Python Flask which makes call to PostgreSQL DB and return the query result all the way back to front end</h2>
-    <textarea [(ngModel)]="Req.sqlStatement"  style="width:100%; height :100px"  id="code">  SQL </textarea > 
-		
-<button  class="btn btn-primary"  (click)="postSqlScript()" >Issue SQL cmd</button>
-
-<h2 style="color: green;">SQL result: </h2>
-
-
-<a href="https://www.tutorialspoint.com/postgresql/" target="_blank">PostgreSQL reference</a>
-
-
-<table id="ngt">
-
-</table>
-
-
-
-
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <img src="../../assets/postgresql-logo_Clipart_svg_File.svg" class="App-logo" alt="logo" />
+            <img src="../../assets/angular.svg" class="App-logo" alt="logo" />
+            <h2 style="color: green;">this SQL lab is to test the SQL statement via the browser. It makes call to the ASP.NET core middleware , then MVC controller uses HttpClient to forward the http request to Python Flask which makes call to PostgreSQL DB and return the query result all the way back to front end</h2>
+            
+            <codemirror [(ngModel)]="Req.sqlStatement" style="width:100%; height :100px" [config]="config"></codemirror>
+            <button  class="btn btn-primary"  (click)="postSqlScript()" >Issue SQL cmd</button>
+            <h2 style="color: green;">SQL result: </h2>
+            <a style="color:red" href="http://ng1-adrianng.c9users.io/NWEN406/angularjs/index.html#/rawsql" target="_blank">AngularJS one version SQL lab</a>
+            <a href="https://www.tutorialspoint.com/postgresql/" target="_blank">PostgreSQL reference</a>
+            <table id="ngt">
+            </table>
+        </div>
+    </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
