--- a/Ng406/src/app/lab-sql/lab-sql.component.html
+++ b/Ng406/src/app/lab-sql/lab-sql.component.html
@@ -13,8 +13,8 @@
             </div>
             <a style="color:red" href="http://ng1-adrianng.c9users.io/NWEN406/angularjs/index.html#/rawsql" target="_blank">AngularJS one version SQL lab</a>
             <a href="https://www.tutorialspoint.com/postgresql/" target="_blank">PostgreSQL reference</a>
-            <table id="ngt">
-            </table>
+            <div id="sqlTables">
+            </div>
         </div>
     </div>
 </div>
