--- a/Ng406/src/app/lab-sql/lab-sql.component.css
+++ b/Ng406/src/app/lab-sql/lab-sql.component.css
@@ -30,6 +30,9 @@ td {
     color : green;
 }
 
+table {
+  margin : 10px ;
+}
 	
 .App-logo {
   animation: App-logo-spin infinite 20s linear !important;
