--- a/Ng406/src/app/lab-sql/lab-sql.component.html
+++ b/Ng406/src/app/lab-sql/lab-sql.component.html
@@ -9,7 +9,7 @@
             <button  class="btn btn-primary"  (click)="postSqlScript()" >Issue SQL cmd</button>
             <h2 style="color: green;">SQL result: </h2>
             <div class="alert alert-danger" role="alert">
-              {{sqlError}}
+              {{sqlError}} {{sqlVersion}}
             </div>
             <a style="color:red" href="http://ng1-adrianng.c9users.io/NWEN406/angularjs/index.html#/rawsql" target="_blank">AngularJS one version SQL lab</a>
             <a href="https://www.tutorialspoint.com/postgresql/" target="_blank">PostgreSQL reference</a>
