add signup page

--- a/Ng406/src/app/app.component.html
+++ b/Ng406/src/app/app.component.html
@@ -1,15 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center" >
-
-  
-    
-
  </div>
-
-<nav >
-  <a routerLink="/chartjs">  <font  class="btn btn-primary" size="13" color="red">Chart js </font></a>
-  <a routerLink="/labsql"> <font  class="btn btn-primary"  size="13" color="red">SQL Lab</font> </a>
-</nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
 
 
