--- a/Ng406/src/app/authentication/authentication.component.css
+++ b/Ng406/src/app/authentication/authentication.component.css
@@ -3,5 +3,22 @@ label{
 }
 
 .container{
-    background : #eee;   
+    width: 30%;
+    background: #effffd; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(-90deg, #effffd, #effbf9); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(-90deg, #effffd, #effbf9); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(-90deg, #effffd, #effbf9); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(-90deg, #effffd, #effbf9); /* Standard syntax */
+    margin-top: 10px;
+      
 } 
+
+
+
+.formField{
+    width: 100%;
+}
+
+.error{
+    background-color : #fff0f0;
+}
