--- a/Ng406/src/app/authentication/authentication.component.html
+++ b/Ng406/src/app/authentication/authentication.component.html
@@ -1,44 +1,21 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
-            <div class="panel panel-default" style="background-color:white">
-                <div class="panel-heading">Login</div>
-                <div class="panel-body">
-                    <form>
-                        <div class="form-group">
-                            <label>Email address</label>
-                            <input type="email" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" class="form-control">
-                        </div>
-                        <button mat-button type="submit" >Submit</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">Register</div>
-                <div class="panel-body">
-                    <form name="register" ng-submit="auth.register()">
-                        <div class="form-group">
-                            <label>Email address</label>
-                            <input type="email" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label>Password Confirm</label>
-                            <input type="password" class="form-control">
-                        </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
-                </div>
-            </div>
+        <div class="col-md-12">
+            <form [formGroup]="form" (ngSubmit)= "onSubmit()">
+                <mat-form-field class="formField">
+                    <input matInput placeholder="email" type="email" [ngClass]="{'error': isValid('email')}" formControlName = "email">
+                </mat-form-field>
+                <mat-form-field class="formField">
+                    <input matInput placeholder="pass word" type="password" [ngClass]="{'error': isValid('password')}" formControlName = "password">
+                </mat-form-field>
+                <mat-form-field class="formField">
+                    <input matInput placeholder="confirm password" type="password" [ngClass]="{'error': isValid('confirmPassword')}" formControlName = "confirmPassword">
+                </mat-form-field>
+                <div *ngIf="form.errors?.confirmPassword" style="color:red">password does not match </div>
+                <button [disabled]="isValidForm()" mat-raised-button color="primary" style="margin:10px">Register</button>
+            </form>    
         </div>
     </div>
 </div>
+        
+        
