--- a/Ng406/src/styles.css
+++ b/Ng406/src/styles.css
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+body{
+     background: #effbf9; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(-90deg, #effbf9, #336cce); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(-90deg, #effbf9, #336cce); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(-90deg, #effbf9, #336cce); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(-90deg, #effbf9, #336cce); /* Standard syntax */
+    margin: 10px;
+}
