--- a/Ng406/src/app/navbar/navbar.component.html
+++ b/Ng406/src/app/navbar/navbar.component.html
@@ -2,4 +2,9 @@
     <button mat-button routerLink="/home">Home </button>
     <button mat-button routerLink="/chartjs">Chart js </button>
     <button mat-button routerLink="/labsql">SQL Lab</button>
+    <span style="flex:1 1 auto"></span>
+    <button *ngIf="!isAuth" mat-button routerLink="/auth">Regiser</button>
+    <button *ngIf="!isAuth" mat-button routerLink="/login">Log in </button>
+    <button mat-button (click)="logOut()">logout</button>
+    <button *ngIf="isAuth" mat-button routerLink="/labsql">Welcome {{UserName}} </button>
 </mat-toolbar>
