--- a/Ng406/src/app/navbar/navbar.component.html
+++ b/Ng406/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">  
     <button mat-button routerLink="/home">Home </button>
-    <button mat-button routerLink="/chartjs">Chart js </button>
+    <button mat-button routerLink="/chartjs">Lambda lab </button>
     <button mat-button routerLink="/labsql">SQL Lab</button>
     <span style="flex:1 1 auto"></span>
     <!--<button *ngIf="!isAuth" mat-button routerLink="/auth">Regiser</button>-->
