--- a/Ng406/src/app/chart-js/chart-js.component.html
+++ b/Ng406/src/app/chart-js/chart-js.component.html
@@ -58,7 +58,7 @@
             <input class="form-control" [(ngModel)]="ReqO.mb" type="text" id="t" value="4"  min="1" max="100">
           </div>
           <br>
-          <button  class="btn btn-primary"  (click)="post()" >request lambda data</button>
+          <button  class="btn btn-primary"  (click)="postToLambda()" >request lambda data</button>
     </div>
     <div class="col-md-10 canvasc  light">
         
